The annotation processor will fail if not all functional annotations and interfaces of a class and its superclasses match.